# vvg

./: .gitignore  .gitmodules  CMakeLists.txt  FindVulkan.cmake  LICENSE.md  README.md  meson.build  meson_options.txt
docs/: dynamic.pseudo.cpp  dynamic2.pseudo.cpp
examples/: CMakeLists.txt  basic-ny-gl.cpp  basic-ny.cpp  basic-windows.cpp  example.cpp  meson.build  nanovg-gl.h  offscreen.cpp
include/: nanovg_vk.h  vgk.hpp  vvg.hpp
include/vvg/: vvg.hpp
src/: CMakeLists.txt  nanovg_vk.h  rednerer.cpp  renderer.cpp  renderer.hpp  renderer2.cpp  texture.cpp  texture.hpp  uniformData.hpp  vvg.hpp
src/shader/: CMakeLists.txt  bintoheader.cpp  fill.frag  fill.vert  fill.vert.h
src/shader/headers/: fill.frag.h  fill.vert.h
src/shader/src/: fill.frag  fill.vert
